feat: configure npm workspaces for monorepo management

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
-﻿{
+{
   "name": "12s",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -12,14 +15,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/PDAC95/12s/issues"
-  },
-  "homepage": "https://github.com/PDAC95/12s#readme",
-  "description": "",
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": ["eslint --fix", "prettier --write"],
-    "*.{json,md}": ["prettier --write"]
-  }
+  "license": "ISC"
 }
