--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -11,18 +11,29 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.24",
+    "@reduxjs/toolkit": "^2.8.2",
     "react": "^19.1.0",
     "react-native": "^0.80.2",
     "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.13.1"
+    "react-native-screens": "^4.13.1",
+    "react-native-svg": "^15.12.1",
+    "react-native-vector-icons": "^10.3.0",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-native": "^0.70.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-navigation": "^3.0.8",
+    "@types/react-redux": "^7.1.34",
+    "@types/styled-components": "^5.1.34",
+    "@types/styled-components-react-native": "^5.2.5",
     "metro-config": "^0.76.0",
     "typescript": "^5.0.0"
   }
