--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "react": "^19.1.0",
     "react-native": "^0.80.2",
+    "react-native-auth0": "^4.6.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
     "react-native-svg": "^15.12.1",
